fixed spacing and styling for question author options on each question card

--- a/react-app/src/components/OpenUpdateQuestionModalButton/OpenUpdateQuestionModalButton.css
+++ b/react-app/src/components/OpenUpdateQuestionModalButton/OpenUpdateQuestionModalButton.css
@@ -3,6 +3,7 @@
     padding: 5px 10px 5px 10px;
     border-radius: 10px;
     width: 150px;
+    margin-top: 5px;
     margin-left: 10px;
     margin-bottom: 5px;
 }
