--- a/react-app/src/components/QuestionCard/QuestionCard.css
+++ b/react-app/src/components/QuestionCard/QuestionCard.css
@@ -50,3 +50,9 @@
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+.author-options {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 10px;
+}
